update election details files
