# pkg/utils/request_helper.go
@@ -6,6 +6,8 @@ import (
 	"github.com/nocturna-ta/golib/custerr"
 	"github.com/nocturna-ta/golib/response"
 	"mime/multipart"
+	"regexp"
+	"strconv"
 )
 
 // ParseRegistrationRequest parses raw request body into ElectionPairRegistrationRequest
@@ -55,7 +57,7 @@ func ParseRegistrationRequest(form *multipart.Form, files map[string]UploadedFil
 
 // ParseDetailRequest parses raw request body into ElectionPairDetailRequest
 // This is in a separate file to avoid circular dependencies
-func ParseUpsertDetailRequest(form *multipart.Form, files map[string]UploadedFile) (*request.ElectionPairDetailRequest, error) {
+func ParseUpsertDetailRequest(form *multipart.Form, files map[string]UploadedFile, workProgramPhotos map[string]UploadedFile) (*request.ElectionPairDetailRequest, error) {
 	programValues := form.Value["detail"]
 	if len(programValues) == 0 {
 		return nil, &custerr.ErrChain{
@@ -83,6 +85,26 @@ func ParseUpsertDetailRequest(form *multipart.Form, files map[string]UploadedFil
 	if programDocs, exists := files["program_docs"]; exists {
 		detailReq.ProgramDocsName = programDocs.OriginalFilename
 		detailReq.ProgramDocsFile = programDocs.File
+	}
+
+	pattern := regexp.MustCompile(`^work_program_photo_(\d+)$`)
+	for fieldName, fileInfo := range workProgramPhotos {
+		matches := pattern.FindStringSubmatch(fieldName)
+		if len(matches) < 2 {
+			continue
+		}
+
+		index, err := strconv.Atoi(matches[1])
+		if err != nil {
+			continue
+		}
+
+		if index < 0 || index >= len(detailReq.WorkProgram) {
+			continue
+		}
+
+		detailReq.WorkProgram[index].ProgramPhoto = fileInfo.OriginalFilename
+		detailReq.WorkProgram[index].ProgramPhotoFile = fileInfo.File
 	}
 
 	return &detailReq, nil
